add titles everywheres

--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -203,3 +203,12 @@ p.quickref {
     font-weight: bold;
   }
 }
+
+.reference-menu {
+  h3 {
+    padding-left: 26px;
+  }
+  ul {
+    padding-left: 28px;
+  }
+}
