--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,5 +1,5 @@
 - @section = "about"
-- @subsection = ""
+- @page_title = "Git - About"
 
 - content_for :sidebar do
   %div.callout
@@ -17,7 +17,7 @@
     %li
       <a href="#" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
     %li
-      <a href="#" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Information Assurance</a>
+      <a href="#" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Data Assurance</a>
     %li
       <a href="#" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
     %li
@@ -151,10 +151,10 @@
 
     %div.bottom-nav
       =link_to "← Small and Fast", "#", {:class => 'previous', 'data-section-id' => 'small-and-fast'}
-      =link_to "Information Assurance →", "#", {:class => 'next', 'data-section-id' => 'info-assurance'}
+      =link_to "Data Assurance →", "#", {:class => 'next', 'data-section-id' => 'info-assurance'}
 
   %section.about#info-assurance
-    %h2 Information Assurance
+    %h2 Data Assurance
 
     %p
       The data model that Git uses ensures cryptographic integrity of every bit
@@ -194,7 +194,7 @@
       <img src="/images/about/index2.png" alt="Index 2" />
 
     %div.bottom-nav
-      =link_to "← Information Assurance", "#", {:class => 'previous', 'data-section-id' => 'info-assurance'}
+      =link_to "← Data Assurance", "#", {:class => 'previous', 'data-section-id' => 'info-assurance'}
       =link_to "Free and Open Source →", "#", {:class => 'next', 'data-section-id' => 'free-and-open-source'}
 
 
