--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -1,5 +1,6 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'book' %>
+<%- @section    = 'documentation' %>
+<%- @subsection = 'book' %>
+<%- @page_title = "Git - Book" %>
 
 <% content_for :sidebar do %>
   <%= render 'translations' %>
