--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -1,5 +1,6 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'external-links' %>
+<%- @section    = 'documentation' %>
+<%- @subsection = 'external-links' %>
+<%- @page_title = 'Git - External Links' %>
 
 <div id='main'>
   <h1>External Links</h1>
