--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -1,5 +1,6 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'reference' %>
+<%- @section    = 'documentation' %>
+<%- @subsection = 'reference' %>
+<%- @page_title = "Git - Reference" %>
 
 <div id='main'>
   <h1>Reference</h1>
@@ -12,23 +13,25 @@
       <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
-  <div class='two-column'>
-    <div class='column-left'>
-      <%= render 'shared/ref/setup' %>
-      <%= render 'shared/ref/creating' %>
-      <%= render 'shared/ref/snapshot' %>
-      <%= render 'shared/ref/branching' %>
-      <%= render 'shared/ref/sharing' %>
-      <%= render 'shared/ref/inspection' %>
-      <%= render 'shared/ref/patching' %>
-    </div>
-    <div class='column-right'>
-      <%= render 'shared/ref/debugging' %>
-      <%= render 'shared/ref/email' %>
-      <%= render 'shared/ref/external' %>
-      <%= render 'shared/ref/admin' %>
-      <%= render 'shared/ref/server' %>
-      <%= render 'shared/ref/plumbing' %>
+  <div class='reference-menu'>
+    <div class='two-column'>
+      <div class='column-left'>
+        <%= render 'shared/ref/setup' %>
+        <%= render 'shared/ref/creating' %>
+        <%= render 'shared/ref/snapshot' %>
+        <%= render 'shared/ref/branching' %>
+        <%= render 'shared/ref/sharing' %>
+        <%= render 'shared/ref/inspection' %>
+        <%= render 'shared/ref/patching' %>
+      </div>
+      <div class='column-right'>
+        <%= render 'shared/ref/debugging' %>
+        <%= render 'shared/ref/email' %>
+        <%= render 'shared/ref/external' %>
+        <%= render 'shared/ref/admin' %>
+        <%= render 'shared/ref/server' %>
+        <%= render 'shared/ref/plumbing' %>
+      </div>
     </div>
   </div>
 </div>
