--- a/app/views/doc/videos.html.erb
+++ b/app/views/doc/videos.html.erb
@@ -1,5 +1,6 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'videos' %>
+<%- @section    = 'documentation' %>
+<%- @subsection = 'videos' %>
+<%- @page_title = 'Git - Videos' %>
 
 <div id='main'>
   <h1>Videos</h1>
