--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -1,5 +1,6 @@
 - @section = "downloads"
 - @subsection = ""
+- @page_title = "Git - Downloading Package"
 
 - content_for :sidebar do
   %div.callout
@@ -13,7 +14,7 @@
     %h3 Your download is starting...
     %iframe{:width => 1, :height => 1, :frameborder => 0, :src => @download.url}
 
-    %p=raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent maintained build for this platform. It was released <strong>#{time_ago_in_words @download.version.committed} ago</strong>, on #{@download.version.committed.strftime("%Y-%m-%d")}."
+    %p=raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent <a href='#{@project_url}'>maintained build</a> for this platform. It was released <strong>#{time_ago_in_words @download.version.committed} ago</strong>, on #{@download.version.committed.strftime("%Y-%m-%d")}."
 
     %p=raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>"
 
