--- a/app/views/downloads/logos/index.html.haml
+++ b/app/views/downloads/logos/index.html.haml
@@ -1,5 +1,6 @@
 - @section = "downloads"
 - @subsection = "logos"
+- @page_title = "Git - Logo Downloads"
 
 - content_for :sidebar do
   %div.callout
