--- a/app/views/shared/ref/_admin.html.erb
+++ b/app/views/shared/ref/_admin.html.erb
@@ -1,4 +1,4 @@
-<h3>Administration</h3>
+<h3 class='admin'>Administration</h3>
 <ul class='unstyled'>
   <li><%= man('git-gc') %></li>
   <li><%= man('git-fsck') %></li>
