--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -1,5 +1,5 @@
 - @section = "documentation"
-- @subsection = ""
+- @page_title = "Git - Documentation"
 
 - content_for :sidebar do
   %div.callout
