--- a/app/views/shared/ref/_creating.html.erb
+++ b/app/views/shared/ref/_creating.html.erb
@@ -1,4 +1,4 @@
-<h3>Getting and Creating Projects</h3>
+<h3 class='projects'>Getting and Creating Projects</h3>
 <ul class='unstyled'>
   <li><%= man('git-init') %></li>
   <li><%= man('git-clone') %></li>
