--- a/app/views/shared/ref/_email.html.erb
+++ b/app/views/shared/ref/_email.html.erb
@@ -1,4 +1,4 @@
-<h3>Email</h3>
+<h3 class='email'>Email</h3>
 <ul class='unstyled'>
   <li><%= man('git-am') %></li>
   <li><%= man('git-apply') %></li>
