--- a/app/views/shared/ref/_external.html.erb
+++ b/app/views/shared/ref/_external.html.erb
@@ -1,4 +1,4 @@
-<h3>External Systems</h3>
+<h3 class='external'>External Systems</h3>
 <ul class='unstyled'>
   <li><%= man('git-svn') %></li>
   <li><%= man('git-fast-import') %></li>
