--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -257,3 +257,25 @@ footer {
     text-align: right; 
   }
 }
+
+table.benchmarks {
+  width: 100%;
+  padding: 20px;
+  margin-bottom: 20px;
+  tr {
+    th.right {
+      text-align: center;
+    }
+    td.desc {
+      font-size: 0.8em;
+      color: #888;
+    }
+    td.number {
+      text-align: right;
+      font-family:monospace;
+    }
+    td {
+     padding: 0 10px;
+    }
+  }
+}
