--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -77,32 +77,96 @@
     %p 
       If you don't believe me, let's see how common operations stack up against
       Subversion, a common centralized version control system that is similar
-      to CVS or Perforce. <em>Smaller is faster</em>
+      to CVS or Perforce. <em>Smaller is faster.</em>
 
     %table{:width => '100%'}
       %tr
         %td
-          =raw gchart("Commit", [['git', 0.649], ['svn', 2.6]])
-          =raw gchart("Commit", [['git', 1.53], ['svn', 24.7]])
+          =raw gchart("Commit A", [['git', 0.649], ['svn', 2.6]])
+        %td
+          =raw gchart("Commit B", [['git', 1.53], ['svn', 24.7]])
+        %td
           =raw gchart("Diff Curr", [['git', 0.257], ['svn', 1.09]])
+        %td
           =raw gchart("Diff Rec", [['git', 0.248], ['svn', 3.99]])
-          =raw gchart("Diff First", [['git', 1.71], ['svn', 6.57]])
+        %td
           =raw gchart("Diff Tags", [['git', 1.17], ['svn', 83.57]])
-          =raw gchart("Log (50)", [['git', 0.012], ['svn', 0.381]])
-          =raw gchart("Log (All)", [['git', 0.519], ['svn', 169.197]])
-          =raw gchart("Log (File)", [['git', 0.601], ['svn', 82.843]])
-          =raw gchart("Update", [['git', 0.896], ['svn', 2.816]])
-          =raw gchart("Blame", [['git', 1.91], ['svn', 3.04]])
-
-    %table{:width => '100%'}
+        %td
+          =raw gchart("Clone", [['git*', 21.0], ['git', 107.5], ['svn', 14.0]])
       %tr
         %td
-          =raw gchart("Clone", [['svn', 14.0], ['git*', 21.0], ['git', 107.5]])
-          =raw gchart("Size", [['svn', 132], ['git', 181]])
+          =raw gchart("Log (50)", [['git', 0.012], ['svn', 0.381]])
+        %td
+          =raw gchart("Log (All)", [['git', 0.519], ['svn', 169.197]])
+        %td
+          =raw gchart("Log (File)", [['git', 0.601], ['svn', 82.843]])
+        %td
+          =raw gchart("Update", [['git', 0.896], ['svn', 2.816]])
+        %td
+          =raw gchart("Blame", [['git', 1.91], ['svn', 3.04]])
+        %td
+          =raw gchart("Size", [['git', 181], ['svn', 132]])
+    %p 
+      To test, I set up large AWS instances in the same availability zone and
+      installed Git and SVN on both machines, put the Ruby repository on both
+      the SVN and Git servers, then did some common operations on both.
+    %p
+      In the cases where the commands don't match up exactly, I tried to match
+      on the lowest common denominator - for example, for the 'commit' tests I
+      am also including time to push for Git, though most of the time you would
+      not actually be pushing to the server immediately after a push where you
+      cannot seperate the two operations in SVN.
+    %p
+      All of these times are in seconds.
 
+    %table.benchmarks
+      %tr
+        %th Operation
+        %th
+        %th.right Git
+        %th.right SVN
+      =raw rchart("Commit Files (A)", [['git', 0.64], ['svn', 2.60]], "Add, commit and push 113 modified files (2164+, 2259-)")
+      =raw rchart("Commit Images (B)", [['git', 1.53], ['svn', 24.70]], "Add, commit and push 1000 1k images")
+      =raw rchart("Diff Current", [['git', 0.25], ['svn', 1.09]], "Diff 187 changed files (1664+, 4859-) against last commit")
+      =raw rchart("Diff Recent", [['git', 0.248], ['svn', 3.99]], "Diff against 4 commits back (269 changed/3609+,6898-)")
+      =raw rchart("Diff Tags", [['git', 1.17], ['svn', 83.57]], "Diff two tags against each other (v1.9.1.0/v1.9.3.0 )")
+      =raw rchart("Log (50)", [['git', 0.012], ['svn', 0.381]], "Log of the last 50 commits (19k of output)")
+      =raw rchart("Log (All)", [['git', 0.52], ['svn', 169.20]], "Log of all commits (26,056 commits - 9.4M of output)")
+      =raw rchart("Log (File)", [['git', 0.60], ['svn', 82.84]], "Log of the history of a single file (array.c - 483 revs)")
+      =raw rchart("Update", [['git', 0.90], ['svn', 2.82]], "Pull of Commit A scenario (113 files changed, 2164+, 2259-)")
+      =raw rchart("Blame", [['git', 1.91], ['svn', 3.04]], "Line annotation of a single file (array.c)")
 
+    %p
+      This is basically the best case scenario for SVN - a server with no load with an
+      80MB/s bandwidth connection to the client machine.  Nearly all of these
+      times would be even worse for SVN if that connection was slower, while
+      many of the Git times would not be affected.
+    %p
+      As you can see, in many of these common version control operations, <strong>Git is
+      one or two orders of magnitude faster than SVN</strong>, even under ideal conditions
+      for SVN.
 
+    %p
+      A couple of places that Git is slower or bigger is in the initial clone operation
+      since Git is downloading the entire history rather than only the latest
+      version. However, as you can see, it's not hugely slower for an operation
+      that you only ever do once.
 
+    %table.benchmarks
+      %tr
+        %th Operation
+        %th
+        %th.right Git*
+        %th.right Git
+        %th.right SVN
+      =raw trchart("Clone", [['git*', 21.0], ['git', 107.50], ['svn', 14.00]], "Clone and shallow clone(*) in Git vs checkout in SVN")
+      =raw trchart("Size (M)", [[nil, nil], ['git', 181], ['svn', 132]], "Size of total client side data and files after clone/checkout (in M)")
+
+    %p
+      It's also interesting to point out the size of the data on the client side
+      is very similar even though Git also has every version of every file for the
+      entire history of the project - this is how efficient it is at compressing
+      and storing data on the client side.
 
 
     %div.bottom-nav
