--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -12,7 +12,7 @@
         <li>
           <h4><a href="http://gitref.org/">Introductory Reference &amp; Tutorial</a></h4>
           <p class='description'>
-            The full contents of the <a href="http://gitref.org/">Git Reference site</a> is now available here. This introductory walkthrough acts as a nice tutorial.
+            This introductory walkthrough acts as a nice tutorial.
           </p>
         </li>
         <li>
@@ -25,6 +25,12 @@
           <h4><a href="/docs/everyday">Everyday Git</a></h4>
           <p class='description'>
             Learn the basics with 20 of the most common commands.
+          </p>
+        </li>
+        <li>
+          <h4><a href="http://gitimmersion.com/">Git Immersion</a></h4>
+          <p class='description'>
+            A guided tour that walks through the fundamentals of Git.
           </p>
         </li>
       </ul>
