--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -232,6 +232,9 @@
       your project is exactly the same as when it was committed, but you can also
       be assured that nothing in it's history was changed.
 
+    %p
+      Most centralized version control systems provide no such integrity by default.
+
     %div.bottom-nav
       =link_to "← Distributed", "#", {:class => 'previous', 'data-section-id' => 'distributed'}
       =link_to "Staging Area →", "#", {:class => 'next', 'data-section-id' => 'staging-area'}
