--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -222,8 +222,11 @@
 
     %p
       The data model that Git uses ensures cryptographic integrity of every bit
-      of your project.  It's impossible to get out of Git anything other than
-      the <strong>exact bits you put in</strong>.
+      of your project.  Every file and commit is checksummed and retrieved by it's
+      checksum when checked back out. It's impossible to get out of Git anything
+      other than the <strong>exact bits you put in</strong>.
+
+    %img{:src => "/images/assurance.png"}
 
     %p
       It is also impossible to change any file, date, commit message or any other
