update from jason

--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -1,3 +1,70 @@
+.topics h3, .topics ul li {
+  padding-left: 23px;
+}
+h3.setup {
+  background: transparent url(/images/icons/setup-sm.png) 0 2px no-repeat;
+}
+.topics h3.setup { background-position: 0 3px; }
+
+h3.projects {
+  background: transparent url(/images/icons/projects-sm.png) 0 7px no-repeat;
+}
+
+h3.snapshotting {
+  background: transparent url(/images/icons/camera-sm.png) 0 4px no-repeat;
+}
+.topics h3.snapshotting { background-position: 0 8px; }
+
+h3.branching {
+  background: transparent url(/images/icons/branch-sm.png) 4px 2px no-repeat;
+}
+.topics h3.branching { background-position: 4px 4px; }
+
+h3.sharing {
+  background: transparent url(/images/icons/sharing-sm.png) 2px 4px no-repeat;
+}
+.topics h3.sharing { background-position: 2px 5px; }
+
+h3.inspection {
+  background: transparent url(/images/icons/inspection-sm.png) 1px 2px no-repeat;
+}
+.topics h3.inspection { background-position: 1px 4px; }
+
+h3.patching {
+  background: transparent url(/images/icons/patching-sm.png) 1px 4px no-repeat;
+}
+.topics h3.patching { background-position: 1px 8px; }
+
+h3.debugging {
+  background: transparent url(/images/icons/debugging-sm.png) 1px 3px no-repeat;
+}
+.topics h3.debugging { background-position: 1px 5px; }
+
+h3.email {
+  background: transparent url(/images/icons/email-sm.png) 0px 3px no-repeat;
+}
+.topics h3.email { background-position: 0 8px; }
+
+h3.external {
+  background: transparent url(/images/icons/external-sm.png) 0px 2px no-repeat;
+}
+.topics h3.external { background-position: 0 5px; }
+
+h3.admin {
+  background: transparent url(/images/icons/admin-sm.png) 2px 2px no-repeat;
+}
+.topics h3.admin { background-position: 2px 5px; }
+
+h3.server-admin {
+  background: transparent url(/images/icons/server-admin-sm.png) 2px 2px no-repeat;
+}
+.topics h3.server-admin { background-position: 2px 5px; }
+
+h3.plumbing {
+  background: transparent url(/images/icons/plumbing-sm.png) 2px 2px no-repeat;
+}
+.topics h3.plumbing{ background-position: 2px 5px; }
+
 #reference-version {
   @extend .unstyled;
   position: relative;
