sidebar is a shared partial now

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -2,9 +2,7 @@
 - @page_title = "Git - Documentation"
 
 - content_for :sidebar do
-  %div.callout
-    %p
-      The entire <strong><a href="/book">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+  = render 'shared/book'
 
 %div#main
   %h1 Documentation 
@@ -61,40 +59,6 @@
                   %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
           <a href="#" id="about-book">About this book</a>
 
-
-  %h2 Videos
-
-  %div.two-column
-    %div.column-left
-      %ul.video-thumbnails
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-    %div.column-right
-      %ul.video-thumbnails
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-  %p
-    %strong= link_to "See all videos →"
 
   %h2 External Links
 
