--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -3,9 +3,7 @@
 - @page_title = "Git - GUI Clients"
 
 - content_for :sidebar do
-  %div.callout
-    %p
-      The entire <strong><a href="/book">Pro Git book</a></strong> written by Scott Chacon is available to <a href="/book">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+  = render 'shared/book'
 
 %div#main
   %h1 GUI Clients
