--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -2,9 +2,7 @@
 - @page_title = "Git - About"
 
 - content_for :sidebar do
-  %div.callout
-    %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+  = render 'shared/book'
 
 %div#main
   %h1 About
