prepare for launch

--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -6,7 +6,6 @@
   = render 'shared/book'
 
 %div#main
-
   %div.two-column
     %div.column-left
       %h1 Downloads
@@ -33,7 +32,7 @@
         %h2 GUI Clients
 
         %p
-          Git comes with a built-in GUI (<strong>git-gui</strong>, <strong>gitk</strong>), but there are several third-party tools for users looking for platform-specific experience.
+          Git comes with built-in GUI tools (<a>git-gui</a>, <a>gitk</a>), but there are several third-party tools for users looking for a platform-specific experience.
 
         %p
           %strong= link_to "View GUI Clients →", "/downloads/guis"
@@ -44,8 +43,7 @@
         %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects. 
 
         %p
-          %strong= link_to "View Logos →", "/downloads/guis"
-
+          %strong= link_to "View Logos →", "/downloads/logos"
 
   %h2 Git via Git
 
