--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -5,4 +5,4 @@
   =link_to "Release Notes", latest_relnote_url
   %span.release-date= latest_release_date
 
-  =link_to "Download for Mac", "#", {:class => 'button'}
+  =link_to "Download for Mac", "/download/mac", {:class => 'button', :id => 'download-link'}
