Add index.html to end of SmartGit link

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -36,8 +36,8 @@
             <strong>Platforms:</strong> Mac</br>
             <strong>Price:</strong> Free
         %li.mac.windows.linux
-          =link_to(image_tag('guis/smartgit.png'), "http://www.syntevo.com/smartgit/")
-          %h4= link_to "SmartGit", "http://www.syntevo.com/smartgit/"
+          =link_to(image_tag('guis/smartgit.png'), "http://www.syntevo.com/smartgit/index.html")
+          %h4= link_to "SmartGit", "http://www.syntevo.com/smartgit/index.html"
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> $79/user / Free for non-commercial use 
