move selectivizr out of asset pipeline

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -10,7 +10,7 @@
     = stylesheet_link_tag "git-scm.css" 
     = javascript_include_tag "modernizr.js", "modernizr-tests.js"
     /[if (gte IE 6)&(lte IE 8)]
-      = javascript_include_tag "selectivizr-min.js"
+      %script{:src => "/javascripts/selectivizr-min.js", :type => "text/javascript"}
     = javascript_include_tag "http://use.typekit.com/jsq2fql.js"
     :javascript
       try{Typekit.load();}catch(e){}
