--- a/app/views/layouts/errors.haml
+++ b/app/views/layouts/errors.haml
@@ -6,7 +6,7 @@
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     = stylesheet_link_tag "errors.css" 
     /[if (gte IE 6)&(lte IE 8)]
-      = javascript_include_tag "selectivizr-min.js"
+      %script{:src => "/javascripts/selectivizr-min.js", :type => "text/javascript"}
     = javascript_include_tag "http://use.typekit.com/jsq2fql.js"
     :javascript
       try{Typekit.load();}catch(e){}
