--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -3,7 +3,7 @@
 
 <div id="main">
   <h1>Download for Linux and Unix</h1>
-  <p>It is easiest to install Git on Linux using the codeferred package manager of your Linux distribution.</p>
+  <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution.</p>
 
   <h3>Debian/Ubuntu</h3>
   <code>$ apt-get install git-core</code>
@@ -18,7 +18,7 @@
   <code>$ cd /usr/ports/devel/git
 $ make install</code>
 
-  <h3>Solaris 11 Excodess</h3>
+  <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
 
 </div>
