Change to Heroku cheat sheet

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -16,7 +16,7 @@
 
   %p.quickref
     Quick reference guides: 
-    =link_to "Salesforce Cheat Sheet", "https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"
+    =link_to "Heroku Cheat Sheet", "https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"
     %small.light (PDF) &nbsp;|&nbsp;
     =link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html"
     %small.light (SVG | PNG) 
