fix pre tt block style

--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -22,8 +22,9 @@
       background-color: #eee0b5;
       padding: 2px;
       font-family: $fixed-width-font-family;
+      display: block;
     }
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   dt.hdlist1 {
