update menu paths and readd video section

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -43,11 +43,12 @@
               %ul
                 %li= link_to "About", "/about", {:class => (@section == 'about') ? 'active' : ''}
                 %li
-                  =link_to "Documentation", "/documentation", {:class => (@section == 'documentation') ? 'active' : ''}
+                  =link_to "Documentation", "/doc", {:class => (@section == 'documentation') ? 'active' : ''}
                   %ul{:class => (@section == 'documentation') ? 'expanded' : ''} 
-                    %li= link_to "Reference", "/documentation/reference", {:class => (@subsection == 'reference') ? 'active' : ''}
-                    %li= link_to "Book", "/documentation/book", {:class => (@subsection == 'book') ? 'active' : ''}
-                    %li= link_to "External Links", "/documentation/external-links", {:class => (@subsection == 'external-links') ? 'active' : ''}
+                    %li= link_to "Reference", "/docs", {:class => (@subsection == 'reference') ? 'active' : ''}
+                    %li= link_to "Book", "/book", {:class => (@subsection == 'book') ? 'active' : ''}
+                    %li= link_to "Videos", "/videos", {:class => (@subsection == 'book') ? 'active' : ''}
+                    %li= link_to "External Links", "/doc/ext", {:class => (@subsection == 'external-links') ? 'active' : ''}
                 %li
                   = link_to "Downloads", "/downloads", {:class => (@section == 'downloads') ? 'active' : ''}
                   %ul{:class => (@section == 'downloads') ? 'expanded' : ''} 
