--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -60,6 +60,40 @@
           <a href="#" id="about-book">About this book</a>
 
 
+  %h2 Videos
+
+  %div.two-column
+    %div.column-left
+      %ul.video-thumbnails
+        %li
+          =link_to(image_tag('tmp/screencast-thumbnail.png'))
+          %h4= link_to "Name of this Screencast"
+          %p.description
+            <strong>Length:</strong> 7:18
+
+        %li
+          =link_to(image_tag('tmp/screencast-thumbnail.png'))
+          %h4= link_to "Name of this Screencast"
+          %p.description
+            <strong>Length:</strong> 7:18
+
+    %div.column-right
+      %ul.video-thumbnails
+        %li
+          =link_to(image_tag('tmp/screencast-thumbnail.png'))
+          %h4= link_to "Name of this Screencast"
+          %p.description
+            <strong>Length:</strong> 7:18
+
+        %li
+          =link_to(image_tag('tmp/screencast-thumbnail.png'))
+          %h4= link_to "Name of this Screencast"
+          %p.description
+            <strong>Length:</strong> 7:18
+
+  %p
+    %strong= link_to "See all videos →", "/videos"
+
   %h2 External Links
 
   %p
