copy jasons changes

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -212,6 +212,9 @@ $monitor-height: 271px;
       &.microsoft {
         background-image: url(/images/company-project-logos/microsoft.png);
       }
+      &.blizzard {
+        background-image: url(/images/company-project-logos/blizzard.png);
+      }
       &.linked-in {
         background-image: url(/images/company-project-logos/linked-in.png);
       }
