--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -270,3 +270,9 @@ p.quickref {
     font-weight: bold;
   }
 }
+
+#video-container {
+  background-color: $callout-color;
+  padding: 10px 10px 2px 10px;
+  margin-bottom: 20px;
+}
