--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -53,7 +53,7 @@
     %li= link_to "Facebook", "#", {:class => 'facebook'}
     %li= link_to "Google", "#", {:class => 'google'}
     %li= link_to "Twitter", "#", {:class => 'twitter'}
-    %li= link_to "Microsoft", "#", {:class => 'microsoft'}
+    %li= link_to "Blizzard", "#", {:class => 'blizzard'}
     %li= link_to "LinkedIn", "#", {:class => 'linked-in'}
     %li= link_to "Linux", "#", {:class => 'linux'}
     %li= link_to "Perl", "#", {:class => 'perl'}
